corpus/kernel/6.8/filesystems/index.md
---
collection: kernel
version: "6.8"
title: "Filesystems in the Linux kernel"
source_url: https://www.kernel.org/doc/html/v6.8/filesystems/index.html
fetched_at: 2026-08-21T03:32:59+00:00
---
English

- [Chinese (Simplified)](../translations/zh_CN/filesystems/index.md)
- [Chinese (Traditional)](../translations/zh_TW/filesystems/index.md)

# Filesystems in the Linux kernel

This under-development manual will, some glorious day, provide
comprehensive information on how the Linux virtual filesystem (VFS) layer
works, along with the filesystems that sit below it. For now, what we have
can be found below.

## Core VFS documentation

See these manuals for documentation about the VFS layer itself and how its
algorithms work.

- [Overview of the Linux Virtual File System](vfs.md)
  - [Introduction](vfs.md#introduction)
  - [Registering and Mounting a Filesystem](vfs.md#registering-and-mounting-a-filesystem)
  - [The Superblock Object](vfs.md#the-superblock-object)
  - [The Inode Object](vfs.md#id1)
  - [The Address Space Object](vfs.md#the-address-space-object)
  - [The File Object](vfs.md#id2)
  - [Directory Entry Cache (dcache)](vfs.md#id3)
  - [Mount Options](vfs.md#mount-options)
  - [Resources](vfs.md#resources)
- [Pathname lookup](path-lookup.md)
  - [Introduction to pathname lookup](path-lookup.md#introduction-to-pathname-lookup)
  - [RCU-walk - faster pathname lookup in Linux](path-lookup.md#rcu-walk-faster-pathname-lookup-in-linux)
  - [A walk among the symlinks](path-lookup.md#a-walk-among-the-symlinks)
- [Linux Filesystems API summary](api-summary.md)
  - [The Linux VFS](api-summary.md#the-linux-vfs)
  - [The proc filesystem](api-summary.md#the-proc-filesystem)
  - [Events based on file descriptors](api-summary.md#events-based-on-file-descriptors)
  - [eventpoll (epoll) interfaces](api-summary.md#eventpoll-epoll-interfaces)
  - [The Filesystem for Exporting Kernel Objects](api-summary.md#the-filesystem-for-exporting-kernel-objects)
  - [The debugfs filesystem](api-summary.md#the-debugfs-filesystem)
- [splice and pipes](splice.md)
  - [splice API](splice.md#splice-api)
  - [pipes API](splice.md#pipes-api)
- [Locking](locking.md)
  - [dentry_operations](locking.md#dentry-operations)
  - [inode_operations](locking.md#inode-operations)
  - [xattr_handler operations](locking.md#xattr-handler-operations)
  - [super_operations](locking.md#super-operations)
  - [file_system_type](locking.md#file-system-type)
  - [address_space_operations](locking.md#address-space-operations)
  - [file_lock_operations](locking.md#file-lock-operations)
  - [lock_manager_operations](locking.md#lock-manager-operations)
  - [buffer_head](locking.md#buffer-head)
  - [block_device_operations](locking.md#block-device-operations)
  - [file_operations](locking.md#file-operations)
  - [dquot_operations](locking.md#dquot-operations)
  - [vm_operations_struct](locking.md#vm-operations-struct)
- [Directory Locking](directory-locking.md)
  - [Primitives](directory-locking.md#primitives)
  - [Splicing](directory-locking.md#splicing)
  - [Multiple-filesystem stuff](directory-locking.md#multiple-filesystem-stuff)
  - [Deadlock avoidance](directory-locking.md#deadlock-avoidance)
  - [Loop avoidance](directory-locking.md#loop-avoidance)
- [The Devpts Filesystem](devpts.md)
- [Linux Directory Notification](dnotify.md)
  - [Implementation expectations (features and bugs :-))](dnotify.md#implementation-expectations-features-and-bugs)
  - [Configuration](dnotify.md#configuration)
  - [Example](dnotify.md#example)
  - [NOTE](dnotify.md#note)
- [Fiemap Ioctl](fiemap.md)
  - [Request Basics](fiemap.md#request-basics)
  - [Extent Mapping](fiemap.md#extent-mapping)
  - [VFS -> File System Implementation](fiemap.md#vfs-file-system-implementation)
- [File management in the Linux kernel](files.md)
- [File Locking Release Notes](locks.md)
  - [1. What's New?](locks.md#what-s-new)
- [Filesystem Mount API](mount_api.md)
  - [Overview](mount_api.md#overview)
  - [The Filesystem context](mount_api.md#the-filesystem-context)
  - [The Filesystem Context Operations](mount_api.md#the-filesystem-context-operations)
  - [Filesystem context Security](mount_api.md#filesystem-context-security)
  - [VFS Filesystem context API](mount_api.md#vfs-filesystem-context-api)
  - [Superblock Creation Helpers](mount_api.md#superblock-creation-helpers)
  - [Parameter Description](mount_api.md#parameter-description)
  - [Parameter Helper Functions](mount_api.md#parameter-helper-functions)
- [Quota subsystem](quota.md)
  - [Quota netlink interface](quota.md#quota-netlink-interface)
- [The seq_file Interface](seq_file.md)
  - [Deprecated create_proc_entry](seq_file.md#deprecated-create-proc-entry)
  - [The iterator interface](seq_file.md#the-iterator-interface)
  - [Formatted output](seq_file.md#formatted-output)
  - [Making it all work](seq_file.md#making-it-all-work)
  - [seq_list](seq_file.md#seq-list)
  - [The extra-simple version](seq_file.md#the-extra-simple-version)
- [Shared Subtrees](sharedsubtree.md)
  - [1) Overview](sharedsubtree.md#overview)
  - [2) Features](sharedsubtree.md#features)
  - [3) Setting mount states](sharedsubtree.md#setting-mount-states)
  - [4) Use cases](sharedsubtree.md#use-cases)
  - [5) Detailed semantics](sharedsubtree.md#detailed-semantics)
  - [6) Quiz](sharedsubtree.md#quiz)
  - [7) FAQ](sharedsubtree.md#faq)
  - [8) Implementation](sharedsubtree.md#implementation)
- [Idmappings](idmappings.md)
  - [Formal notes](idmappings.md#formal-notes)
  - [General notes](idmappings.md#general-notes)
  - [Translation algorithms](idmappings.md#translation-algorithms)
  - [Idmappings when creating filesystem objects](idmappings.md#idmappings-when-creating-filesystem-objects)
  - [Idmappings on idmapped mounts](idmappings.md#idmappings-on-idmapped-mounts)
- [Automount Support](automount-support.md)
  - [In-Kernel Automounting](automount-support.md#in-kernel-automounting)
  - [Automatic Mountpoint Expiry](automount-support.md#automatic-mountpoint-expiry)
  - [Userspace Driven Expiry](automount-support.md#userspace-driven-expiry)
- [Filesystem Caching](caching/index.md)
  - [General Filesystem Caching](caching/fscache.md)
  - [Network Filesystem Caching API](caching/netfs-api.md)
  - [Cache Backend API](caching/backend-api.md)
  - [Cache on Already Mounted Filesystem](caching/cachefiles.md)
- [Changes since 2.5.0:](porting.md)

## Filesystem support layers

Documentation for the support code within the filesystem layer for use in
filesystem implementations.

- [The Linux Journalling API](journalling.md)
  - [Overview](journalling.md#overview)
  - [Data Types](journalling.md#data-types)
  - [Functions](journalling.md#functions)
  - [See also](journalling.md#see-also)
- [Filesystem-level encryption (fscrypt)](fscrypt.md)
  - [Introduction](fscrypt.md#introduction)
  - [Threat model](fscrypt.md#threat-model)
  - [Key hierarchy](fscrypt.md#key-hierarchy)
  - [Encryption modes and usage](fscrypt.md#encryption-modes-and-usage)
  - [User API](fscrypt.md#user-api)
  - [Access semantics](fscrypt.md#access-semantics)
  - [Encryption policy enforcement](fscrypt.md#encryption-policy-enforcement)
  - [Inline encryption support](fscrypt.md#inline-encryption-support)
  - [Direct I/O support](fscrypt.md#direct-i-o-support)
  - [Implementation details](fscrypt.md#implementation-details)
  - [Tests](fscrypt.md#tests)
- [fs-verity: read-only file-based authenticity protection](fsverity.md)
  - [Introduction](fsverity.md#introduction)
  - [Use cases](fsverity.md#use-cases)
  - [User API](fsverity.md#user-api)
  - [Accessing verity files](fsverity.md#accessing-verity-files)
  - [File digest computation](fsverity.md#file-digest-computation)
  - [Built-in signature verification](fsverity.md#built-in-signature-verification)
  - [Filesystem support](fsverity.md#filesystem-support)
  - [Implementation details](fsverity.md#implementation-details)
  - [Userspace utility](fsverity.md#userspace-utility)
  - [Tests](fsverity.md#tests)
  - [FAQ](fsverity.md#faq)
- [Network Filesystem Helper Library](netfs_library.md)
  - [Overview](netfs_library.md#overview)
  - [Per-Inode Context](netfs_library.md#per-inode-context)
  - [Buffered Read Helpers](netfs_library.md#buffered-read-helpers)
  - [API Function Reference](netfs_library.md#api-function-reference)

## Filesystems

Documentation for filesystem implementations.

- [v9fs: Plan 9 Resource Sharing for Linux](9p.md)
  - [About](9p.md#about)
  - [Usage](9p.md#usage)
  - [Options](9p.md#options)
  - [Behavior](9p.md#behavior)
  - [Resources](9p.md#resources)
- [Acorn Disc Filing System - ADFS](adfs.md)
  - [Filesystems supported by ADFS](adfs.md#filesystems-supported-by-adfs)
  - [Mount options for ADFS](adfs.md#mount-options-for-adfs)
  - [Mapping of ADFS permissions to Linux permissions](adfs.md#mapping-of-adfs-permissions-to-linux-permissions)
  - [RISC OS file type suffix](adfs.md#risc-os-file-type-suffix)
- [Overview of Amiga Filesystems](affs.md)
  - [Mount options for the AFFS](affs.md#mount-options-for-the-affs)
  - [Handling of the Users/Groups and protection flags](affs.md#handling-of-the-users-groups-and-protection-flags)
  - [Symbolic links](affs.md#symbolic-links)
  - [Examples](affs.md#examples)
  - [IMPORTANT NOTE](affs.md#important-note)
  - [Bugs, Restrictions, Caveats](affs.md#bugs-restrictions-caveats)
- [kAFS: AFS FILESYSTEM](afs.md)
  - [Overview](afs.md#overview)
  - [Compilation](afs.md#compilation)
  - [Usage](afs.md#usage)
  - [Mountpoints](afs.md#mountpoints)
  - [Dynamic Root](afs.md#dynamic-root)
  - [Proc Filesystem](afs.md#proc-filesystem)
  - [The Cell Database](afs.md#the-cell-database)
  - [Security](afs.md#security)
  - [The @sys Substitution](afs.md#the-sys-substitution)
- [autofs - how it works](autofs.md)
  - [Purpose](autofs.md#purpose)
  - [Context](autofs.md#context)
  - [Content](autofs.md#content)
  - [Mount Traps](autofs.md#mount-traps)
  - [Mountpoint expiry](autofs.md#mountpoint-expiry)
  - [Communicating with autofs: detecting the daemon](autofs.md#communicating-with-autofs-detecting-the-daemon)
  - [Communicating with autofs: the event pipe](autofs.md#communicating-with-autofs-the-event-pipe)
  - [Communicating with autofs: root directory ioctls](autofs.md#communicating-with-autofs-root-directory-ioctls)
  - [Communicating with autofs: char-device ioctls](autofs.md#communicating-with-autofs-char-device-ioctls)
  - [Catatonic mode](autofs.md#catatonic-mode)
  - [The "ignore" mount option](autofs.md#the-ignore-mount-option)
  - [autofs, name spaces, and shared mounts](autofs.md#autofs-name-spaces-and-shared-mounts)
- [Miscellaneous Device control operations for the autofs kernel module](autofs-mount-control.md)
  - [The problem](autofs-mount-control.md#the-problem)
  - [The Solution](autofs-mount-control.md#the-solution)
  - [autofs Miscellaneous Device mount control interface](autofs-mount-control.md#autofs-miscellaneous-device-mount-control-interface)
  - [The ioctls](autofs-mount-control.md#the-ioctls)
- [BeOS filesystem for Linux](befs.md)
  - [Warning](befs.md#warning)
  - [License](befs.md#license)
  - [Author](befs.md#author)
  - [What is this Driver?](befs.md#what-is-this-driver)
  - [Which is it, BFS or BEFS?](befs.md#which-is-it-bfs-or-befs)
  - [How to Install](befs.md#how-to-install)
  - [Using BFS](befs.md#using-bfs)
  - [Mount Options](befs.md#mount-options)
  - [How to Get Latest Version](befs.md#how-to-get-latest-version)
  - [Any Known Bugs?](befs.md#any-known-bugs)
  - [Special Thanks](befs.md#special-thanks)
- [BFS Filesystem for Linux](bfs.md)
- [BTRFS](btrfs.md)
- [Ceph Distributed File System](ceph.md)
  - [Mount Syntax](ceph.md#mount-syntax)
  - [Mount Options](ceph.md#mount-options)
  - [More Information](ceph.md#more-information)
- [Coda Kernel-Venus Interface](coda.md)
  - [1. Introduction](coda.md#introduction)
  - [2. Servicing Coda filesystem calls](coda.md#servicing-coda-filesystem-calls)
  - [3. The message layer](coda.md#the-message-layer)
  - [4. The interface at the call level](coda.md#the-interface-at-the-call-level)
  - [5. The minicache and downcalls](coda.md#the-minicache-and-downcalls)
  - [6. Initialization and cleanup](coda.md#initialization-and-cleanup)
- [Configfs - Userspace-driven Kernel Object Configuration](configfs.md)
  - [What is configfs?](configfs.md#what-is-configfs)
  - [Using configfs](configfs.md#using-configfs)
  - [Configuring FakeNBD: an Example](configfs.md#configuring-fakenbd-an-example)
  - [Coding With configfs](configfs.md#coding-with-configfs)
  - [struct config_item](configfs.md#struct-config-item)
  - [struct config_item_type](configfs.md#struct-config-item-type)
  - [struct configfs_attribute](configfs.md#struct-configfs-attribute)
  - [struct configfs_bin_attribute](configfs.md#struct-configfs-bin-attribute)
  - [struct config_group](configfs.md#struct-config-group)
  - [struct configfs_subsystem](configfs.md#struct-configfs-subsystem)
  - [An Example](configfs.md#an-example)
  - [Hierarchy Navigation and the Subsystem Mutex](configfs.md#hierarchy-navigation-and-the-subsystem-mutex)
  - [Item Aggregation Via symlink(2)](configfs.md#item-aggregation-via-symlink-2)
  - [Automatically Created Subgroups](configfs.md#automatically-created-subgroups)
  - [Dependent Subsystems](configfs.md#dependent-subsystems)
- [Cramfs - cram a filesystem onto a small ROM](cramfs.md)
  - [Usage Notes](cramfs.md#usage-notes)
  - [Memory Mapped cramfs image](cramfs.md#memory-mapped-cramfs-image)
  - [Tools](cramfs.md#tools)
  - [For /usr/share/magic](cramfs.md#for-usr-share-magic)
  - [Hacker Notes](cramfs.md#hacker-notes)
- [Direct Access for files](dax.md)
  - [Motivation](dax.md#motivation)
  - [Usage](dax.md#usage)
  - [Enabling DAX on ext2 and erofs](dax.md#enabling-dax-on-ext2-and-erofs)
  - [Enabling DAX on xfs and ext4](dax.md#enabling-dax-on-xfs-and-ext4)
  - [Summary](dax.md#summary)
  - [Details](dax.md#details)
  - [Enabling DAX on virtiofs](dax.md#enabling-dax-on-virtiofs)
  - [Implementation Tips for Block Driver Writers](dax.md#implementation-tips-for-block-driver-writers)
  - [Implementation Tips for Filesystem Writers](dax.md#implementation-tips-for-filesystem-writers)
  - [Handling Media Errors](dax.md#handling-media-errors)
  - [Shortcomings](dax.md#shortcomings)
- [DebugFS](debugfs.md)
- [DLMFS](dlmfs.md)
  - [Credits](dlmfs.md#credits)
  - [Caveats](dlmfs.md#caveats)
  - [Mount options](dlmfs.md#mount-options)
  - [Usage](dlmfs.md#usage)
  - [Setup](dlmfs.md#setup)
  - [Locking](dlmfs.md#locking)
  - [See Also](dlmfs.md#see-also)
- [eCryptfs: A stacked cryptographic filesystem for Linux](ecryptfs.md)
  - [Mount-wide Passphrase](ecryptfs.md#mount-wide-passphrase)
  - [Notes](ecryptfs.md#notes)
- [efivarfs - a (U)EFI variable filesystem](efivarfs.md)
- [EROFS - Enhanced Read-Only File System](erofs.md)
  - [Overview](erofs.md#overview)
  - [Mount options](erofs.md#mount-options)
  - [Sysfs Entries](erofs.md#sysfs-entries)
  - [On-disk details](erofs.md#on-disk-details)
- [The Second Extended Filesystem](ext2.md)
  - [Options](ext2.md#options)
  - [Specification](ext2.md#specification)
  - [References](ext2.md#references)
- [Ext3 Filesystem](ext3.md)
- [ext4 Data Structures and Algorithms](ext4/index.md)
  - [1. About this Book](ext4/about.md)
  - [2. High Level Design](ext4/overview.md)
  - [3. Global Structures](ext4/globals.md)
  - [4. Dynamic Structures](ext4/dynamic.md)
- [WHAT IS Flash-Friendly File System (F2FS)?](f2fs.md)
  - [Background and Design issues](f2fs.md#background-and-design-issues)
  - [Key Features](f2fs.md#key-features)
  - [Mount Options](f2fs.md#mount-options)
  - [Debugfs Entries](f2fs.md#debugfs-entries)
  - [Sysfs Entries](f2fs.md#sysfs-entries)
  - [Usage](f2fs.md#usage)
  - [Design](f2fs.md#design)
- [Global File System 2](gfs2.md)
- [uevents and GFS2](gfs2-uevents.md)
  - [A list of GFS2 uevents](gfs2-uevents.md#a-list-of-gfs2-uevents)
  - [Information common to all GFS2 uevents (uevent environment variables)](gfs2-uevents.md#information-common-to-all-gfs2-uevents-uevent-environment-variables)
- [Glock internal locking rules](gfs2-glocks.md)
  - [Glock Statistics](gfs2-glocks.md#glock-statistics)
- [Macintosh HFS Filesystem for Linux](hfs.md)
  - [Mount options](hfs.md#mount-options)
  - [Writing to HFS Filesystems](hfs.md#writing-to-hfs-filesystems)
  - [Creating HFS filesystems](hfs.md#creating-hfs-filesystems)
  - [Credits](hfs.md#credits)
- [Macintosh HFSPlus Filesystem for Linux](hfsplus.md)
  - [Mount options](hfsplus.md#mount-options)
  - [References](hfsplus.md#references)
- [Read/Write HPFS 2.09](hpfs.md)
  - [Credits](hpfs.md#credits)
  - [File names](hpfs.md#file-names)
  - [Extended attributes](hpfs.md#extended-attributes)
  - [Symlinks](hpfs.md#symlinks)
  - [Codepages](hpfs.md#codepages)
  - [Known bugs](hpfs.md#known-bugs)
  - [What does "unbalanced tree" message mean?](hpfs.md#what-does-unbalanced-tree-message-mean)
  - [Bugs in OS/2](hpfs.md#bugs-in-os-2)
  - [Codepage bugs described above](hpfs.md#codepage-bugs-described-above)
  - [History](hpfs.md#history)
- [FUSE](fuse.md)
  - [Definitions](fuse.md#definitions)
  - [What is FUSE?](fuse.md#what-is-fuse)
  - [Filesystem type](fuse.md#filesystem-type)
  - [Mount options](fuse.md#mount-options)
  - [Control filesystem](fuse.md#control-filesystem)
  - [Aborting a filesystem connection](fuse.md#aborting-a-filesystem-connection)
  - [How do non-privileged mounts work?](fuse.md#how-do-non-privileged-mounts-work)
  - [How are requirements fulfilled?](fuse.md#how-are-requirements-fulfilled)
  - [I think these limitations are unacceptable?](fuse.md#i-think-these-limitations-are-unacceptable)
  - [Kernel - userspace interface](fuse.md#kernel-userspace-interface)
- [Fuse I/O Modes](fuse-io.md)
- [Inotify - A Powerful yet Simple File Change Notification System](inotify.md)
- [ISO9660 Filesystem](isofs.md)
- [NILFS2](nilfs2.md)
  - [Caveats](nilfs2.md#caveats)
  - [Mount options](nilfs2.md#mount-options)
  - [Ioctls](nilfs2.md#ioctls)
  - [NILFS2 usage](nilfs2.md#nilfs2-usage)
  - [Disk format](nilfs2.md#disk-format)
- [NFS](nfs/index.md)
  - [NFSv4 client identifier](nfs/client-identifier.md)
  - [See Also](nfs/client-identifier.md#see-also)
  - [Making Filesystems Exportable](nfs/exporting.md)
  - [Reference counting in pnfs](nfs/pnfs.md)
  - [RPC Cache](nfs/rpc-cache.md)
  - [rpcsec_gss support for kernel RPC servers](nfs/rpc-server-gss.md)
  - [NFSv4.1 Server Implementation](nfs/nfs41-server.md)
  - [Kernel NFS Server Statistics](nfs/knfsd-stats.md)
  - [Reexporting NFS filesystems](nfs/reexport.md)
- [The Linux NTFS filesystem driver](ntfs.md)
  - [Overview](ntfs.md#overview)
  - [Web site](ntfs.md#web-site)
  - [Features](ntfs.md#features)
  - [Supported mount options](ntfs.md#supported-mount-options)
  - [Known bugs and (mis-)features](ntfs.md#known-bugs-and-mis-features)
  - [Using NTFS volume and stripe sets](ntfs.md#using-ntfs-volume-and-stripe-sets)
- [NTFS3](ntfs3.md)
  - [Summary and Features](ntfs3.md#summary-and-features)
  - [Mount Options](ntfs3.md#mount-options)
  - [Todo list](ntfs3.md#todo-list)
  - [References](ntfs3.md#references)
- [OCFS2 filesystem](ocfs2.md)
  - [Credits](ocfs2.md#credits)
  - [Caveats](ocfs2.md#caveats)
  - [Mount options](ocfs2.md#mount-options)
- [OCFS2 file system - online file check](ocfs2-online-filecheck.md)
  - [Introduction](ocfs2-online-filecheck.md#introduction)
  - [Scope](ocfs2-online-filecheck.md#scope)
  - [User interface](ocfs2-online-filecheck.md#user-interface)
  - [Fixing stuff](ocfs2-online-filecheck.md#fixing-stuff)
- [Optimized MPEG Filesystem (OMFS)](omfs.md)
  - [Overview](omfs.md#overview)
  - [Options](omfs.md#options)
  - [Disk format](omfs.md#disk-format)
- [ORANGEFS](orangefs.md)
  - [Mailing List Archives](orangefs.md#mailing-list-archives)
  - [Mailing List Submissions](orangefs.md#mailing-list-submissions)
  - [Documentation](orangefs.md#documentation)
  - [Running ORANGEFS On a Single Server](orangefs.md#running-orangefs-on-a-single-server)
  - [Userspace Filesystem Source](orangefs.md#userspace-filesystem-source)
  - [Building ORANGEFS on a Single Server](orangefs.md#building-orangefs-on-a-single-server)
  - [Running xfstests](orangefs.md#running-xfstests)
  - [Options](orangefs.md#options)
  - [Debugging](orangefs.md#debugging)
  - [Protocol between Kernel Module and Userspace](orangefs.md#protocol-between-kernel-module-and-userspace)
- [Overlay Filesystem](overlayfs.md)
  - [Overlay objects](overlayfs.md#overlay-objects)
  - [Upper and Lower](overlayfs.md#upper-and-lower)
  - [Directories](overlayfs.md#directories)
  - [whiteouts and opaque directories](overlayfs.md#whiteouts-and-opaque-directories)
  - [readdir](overlayfs.md#readdir)
  - [renaming directories](overlayfs.md#renaming-directories)
  - [Non-directories](overlayfs.md#non-directories)
  - [Permission model](overlayfs.md#permission-model)
  - [Multiple lower layers](overlayfs.md#multiple-lower-layers)
  - [Metadata only copy up](overlayfs.md#metadata-only-copy-up)
  - [Data-only lower layers](overlayfs.md#data-only-lower-layers)
  - [fs-verity support](overlayfs.md#fs-verity-support)
  - [Sharing and copying layers](overlayfs.md#sharing-and-copying-layers)
  - [Nesting overlayfs mounts](overlayfs.md#nesting-overlayfs-mounts)
  - [Non-standard behavior](overlayfs.md#non-standard-behavior)
  - [Changes to underlying filesystems](overlayfs.md#changes-to-underlying-filesystems)
  - [NFS export](overlayfs.md#nfs-export)
  - [UUID and fsid](overlayfs.md#uuid-and-fsid)
  - [Volatile mount](overlayfs.md#volatile-mount)
  - [User xattr](overlayfs.md#user-xattr)
  - [Testsuite](overlayfs.md#testsuite)
- [The /proc Filesystem](proc.md)
  - [Preface](proc.md#preface)
  - [Chapter 1: Collecting System Information](proc.md#chapter-1-collecting-system-information)
  - [Chapter 2: Modifying System Parameters](proc.md#chapter-2-modifying-system-parameters)
  - [Chapter 3: Per-process Parameters](proc.md#chapter-3-per-process-parameters)
  - [Chapter 4: Configuring procfs](proc.md#chapter-4-configuring-procfs)
  - [Chapter 5: Filesystem behavior](proc.md#chapter-5-filesystem-behavior)
- [The QNX6 Filesystem](qnx6.md)
  - [Option](qnx6.md#option)
  - [Specification](qnx6.md#specification)
- [Ramfs, rootfs and initramfs](ramfs-rootfs-initramfs.md)
  - [What is ramfs?](ramfs-rootfs-initramfs.md#what-is-ramfs)
  - [ramfs and ramdisk:](ramfs-rootfs-initramfs.md#ramfs-and-ramdisk)
  - [ramfs and tmpfs:](ramfs-rootfs-initramfs.md#ramfs-and-tmpfs)
  - [What is rootfs?](ramfs-rootfs-initramfs.md#what-is-rootfs)
  - [What is initramfs?](ramfs-rootfs-initramfs.md#what-is-initramfs)
  - [Populating initramfs:](ramfs-rootfs-initramfs.md#populating-initramfs)
  - [External initramfs images:](ramfs-rootfs-initramfs.md#external-initramfs-images)
  - [Contents of initramfs:](ramfs-rootfs-initramfs.md#contents-of-initramfs)
  - [Why cpio rather than tar?](ramfs-rootfs-initramfs.md#why-cpio-rather-than-tar)
  - [Future directions:](ramfs-rootfs-initramfs.md#future-directions)
- [relay interface (formerly relayfs)](relay.md)
  - [Semantics](relay.md#semantics)
  - [klog and relay-apps example code](relay.md#klog-and-relay-apps-example-code)
  - [The relay interface user space API](relay.md#the-relay-interface-user-space-api)
  - [The relay interface kernel API](relay.md#the-relay-interface-kernel-api)
  - [Resources](relay.md#resources)
  - [Credits](relay.md#credits)
- [ROMFS - ROM File System](romfs.md)
- [CIFS](smb/index.md)
  - [KSMBD - SMB3 Kernel Server](smb/ksmbd.md)
  - [Mounting root file system via SMB (cifs.ko)](smb/cifsroot.md)
- [SPU Filesystem](spufs/index.md)
  - [spufs](spufs/spufs.md)
  - [spu_create](spufs/spu_create.md)
  - [spu_run](spufs/spu_run.md)
- [Squashfs 4.0 Filesystem](squashfs.md)
  - [1. Filesystem Features](squashfs.md#filesystem-features)
  - [2. Using Squashfs](squashfs.md#using-squashfs)
  - [2.1 Mount options](squashfs.md#mount-options)
  - [3. Squashfs Filesystem Design](squashfs.md#squashfs-filesystem-design)
  - [3.1 Compression options](squashfs.md#compression-options)
  - [3.2 Inodes](squashfs.md#inodes)
  - [3.3 Directories](squashfs.md#directories)
  - [3.4 File data](squashfs.md#file-data)
  - [3.5 Fragment lookup table](squashfs.md#fragment-lookup-table)
  - [3.6 Uid/gid lookup table](squashfs.md#uid-gid-lookup-table)
  - [3.7 Export table](squashfs.md#export-table)
  - [3.8 Xattr table](squashfs.md#xattr-table)
  - [4. TODOs and Outstanding Issues](squashfs.md#todos-and-outstanding-issues)
  - [4.1 TODO list](squashfs.md#todo-list)
  - [4.2 Squashfs Internal Cache](squashfs.md#squashfs-internal-cache)
- [sysfs - _The_ filesystem for exporting kernel objects](sysfs.md)
  - [What it is](sysfs.md#what-it-is)
  - [Using sysfs](sysfs.md#using-sysfs)
  - [Directory Creation](sysfs.md#directory-creation)
  - [Attributes](sysfs.md#attributes)
  - [Subsystem-Specific Callbacks](sysfs.md#subsystem-specific-callbacks)
  - [Reading/Writing Attribute Data](sysfs.md#reading-writing-attribute-data)
  - [Top Level Directory Layout](sysfs.md#top-level-directory-layout)
  - [Current Interfaces](sysfs.md#current-interfaces)
  - [Documentation](sysfs.md#documentation)
- [SystemV Filesystem](sysv-fs.md)
- [Tmpfs](tmpfs.md)
- [UBI File System](ubifs.md)
  - [Introduction](ubifs.md#introduction)
  - [Mount options](ubifs.md#mount-options)
  - [Quick usage instructions](ubifs.md#quick-usage-instructions)
  - [References](ubifs.md#references)
- [UBIFS Authentication Support](ubifs-authentication.md)
  - [Introduction](ubifs-authentication.md#introduction)
  - [UBIFS Authentication](ubifs-authentication.md#ubifs-authentication)
  - [Future Extensions](ubifs-authentication.md#future-extensions)
  - [References](ubifs-authentication.md#references)
- [UDF file system](udf.md)
- [virtiofs: virtio-fs host<->guest shared file system](virtiofs.md)
  - [Introduction](virtiofs.md#introduction)
  - [Usage](virtiofs.md#usage)
  - [Internals](virtiofs.md#internals)
- [VFAT](vfat.md)
  - [USING VFAT](vfat.md#using-vfat)
  - [VFAT MOUNT OPTIONS](vfat.md#vfat-mount-options)
  - [LIMITATION](vfat.md#limitation)
  - [TODO](vfat.md#todo)
  - [POSSIBLE PROBLEMS](vfat.md#possible-problems)
  - [TEST SUITE](vfat.md#test-suite)
  - [NOTES ON THE STRUCTURE OF THE VFAT FILESYSTEM](vfat.md#notes-on-the-structure-of-the-vfat-filesystem)
- [XFS Filesystem Documentation](xfs/index.md)
  - [1. XFS Logging Design](xfs/xfs-delayed-logging-design.md)
  - [2. XFS Maintainer Entry Profile](xfs/xfs-maintainer-entry-profile.md)
  - [3. XFS Self Describing Metadata](xfs/xfs-self-describing-metadata.md)
  - [4. XFS Online Fsck Design](xfs/xfs-online-fsck-design.md)
- [ZoneFS - Zone filesystem for Zoned block devices](zonefs.md)
  - [Introduction](zonefs.md#introduction)
  - [Zonefs Overview](zonefs.md#zonefs-overview)
  - [Zonefs User Space Tools](zonefs.md#zonefs-user-space-tools)
